gcc/testsuite/gdc.test/fail_compilation/fail4269a.d
enum bool WWW = is(typeof(A.x));

interface A {
    B blah;
    void foo(B b){} 
}

